--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <!-- 引入quill富文本编辑器样式 -->
+  <link href="./assets/css/quill.snow.css" rel="stylesheet" />
 </head>
 
 <body>
